--- a/blog/app/templates/post.hbs
+++ b/blog/app/templates/post.hbs
@@ -1,2 +1,12 @@
-<h3>{{title}}</h3>
-{{body}}
+
+{{#if isEditing}}
+  {{input value=title}}
+  {{textarea value=body}}
+
+  <button {{action 'savePost' this}}>Save Post</button>
+{{else}}
+  <h3>{{title}}</h3>
+  {{body}}
+
+  <button {{action 'editPost' this}}>Edit Post</button>
+{{/if}}
